<resources>
    <string name="dash">-</string>
    <string name="app_name">SDA School Bahraich</string>
    <string name="sda_school">SDA School</string>
    <string name="bahraich">Bahraich</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_id">User ID</string>
    <string name="attendance">Attendance</string>
    <string name="assignments">Assignments</string>
    <string name="marks">Marks</string>
    <string name="calendar">Calendar</string>
    <string name="fees">Fees</string>
    <string name="circulars">Circulars</string>
    <string name="month">Month</string>
    <string name="days_elapsed">Days Elapsed</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="total">Total</string>
    <string name="completed">Completed</string>
    <string name="due">Due</string>
    <string name="this_week">This Week</string>
    <string name="holiday">Holiday</string>
    <string name="events">Events</string>
    <string name="class_">Class</string>
    <string name="class_dash">Class - </string>
    <string name="roll_no_dash">Roll No - </string>
    <string name="test">Test</string>
    <string name="attended">Attended</string>
    <string name="exams">Exams</string>
    <string name="last_paid">Last Paid</string>
    <string name="total_fees">Total Fees</string>
    <string name="fees_paid">Fees Paid</string>
    <string name="fine">Fine</string>
    <string name="date">Date</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="performance">Performance</string>
    <string name="month_of">Month Of</string>
    <string name="date_paid">Date Paid</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="bill_no">Bill No</string>

    <string name="average">Average</string>

    <string name="unit_test_1">Unit Test I</string>
    <string name="unit_test_2">Unit Test II</string>
    <string name="unit_test_3">Unit Test III</string>
    <string name="unit_test_4">Unit Test IV</string>
    <string name="exam_1">I Term Exam</string>
    <string name="exam_2">II Term Exam</string>

    <string name="sun">S</string>
    <string name="mon">M</string>
    <string name="tue">T</string>
    <string name="wed">W</string>
    <string name="thu">T</string>
    <string name="fri">F</string>
    <string name="sat">S</string>

    <string name="preference_roll_no">preference_roll_no</string>
</resources>
