<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity.LoginActivity">

    <TextView
        android:id="@+id/sda_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_32_dp"
        android:text="@string/sda_school"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="@dimen/_42_dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bahraich"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sda_school"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/bahraich"
        android:textAllCaps="true"
        android:textSize="@dimen/_26_dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_id_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/user_id"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_56_dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/user_id"
        android:textSize="@dimen/_16_dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_52_dp"
        android:layout_above="@id/password_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_56_dp"
        android:layout_marginEnd="@dimen/_56_dp"
        android:layout_marginBottom="@dimen/_16_dp"
        android:backgroundTint="@color/darkGray"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/password_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/password"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_56_dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/password"
        android:textSize="@dimen/_16_dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_52_dp"
        android:layout_above="@id/login_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_56_dp"
        android:layout_marginEnd="@dimen/_56_dp"
        android:layout_marginBottom="@dimen/_32_dp"
        android:backgroundTint="@color/darkGray"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_52_dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_56_dp"
        android:layout_marginEnd="@dimen/_56_dp"
        android:layout_marginBottom="@dimen/_86_dp"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/_20_dp" />

</RelativeLayout>