<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".marksActivity.MarksOpenSubjectActivity">

    <View
        android:id="@+id/colourView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120_dp"
        android:background="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_marks_open_heading"
        android:layout_width="@dimen/_120_dp"
        android:layout_height="@dimen/_120_dp"
        app:cardCornerRadius="@dimen/_120_dp"
        app:layout_constraintBottom_toBottomOf="@+id/colourView"
        app:layout_constraintEnd_toEndOf="@id/colourView"
        app:layout_constraintStart_toStartOf="@+id/colourView"
        app:layout_constraintTop_toBottomOf="@+id/colourView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:textStyle="bold"
            android:textSize="@dimen/_16_dp"
            android:text="@string/average"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/performance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_26_dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/performance"
        android:textSize="@dimen/_20_dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_marks_open_heading" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/performance"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_16_dp"
                android:orientation="vertical"
                android:weightSum="6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/unit_test_1"
                    android:textSize="@dimen/_16_dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/unit_test_2"
                    android:textSize="@dimen/_16_dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/exam_1"
                    android:textSize="@dimen/_16_dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/unit_test_3"
                    android:textSize="@dimen/_16_dp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/unit_test_4"
                    android:textSize="@dimen/_16_dp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/exam_2"
                    android:textSize="@dimen/_16_dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/dash_seperator"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="6">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/dash"
                        android:textSize="@dimen/_16_dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/dash"
                        android:textSize="@dimen/_16_dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/dash"
                        android:textSize="@dimen/_16_dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/dash"
                        android:textSize="@dimen/_16_dp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/dash"
                        android:textSize="@dimen/_16_dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/dash"
                        android:textSize="@dimen/_16_dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/details"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_8_dp"
                    android:layout_toRightOf="@id/dash_seperator"
                    android:orientation="vertical"
                    android:weightSum="6">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:text="12 / 20"
                        android:textSize="@dimen/_16_dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:text="20 / 20"
                        android:textSize="@dimen/_16_dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:text="70 / 100"
                        android:textSize="@dimen/_16_dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:text="16 / 20"
                        android:textSize="@dimen/_16_dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:text="17 / 20"
                        android:textSize="@dimen/_16_dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:text="85 / 100"
                        android:textSize="@dimen/_16_dp" />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>