<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_16_dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_16_dp"
                android:orientation="vertical"
                android:weightSum="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/month_of"
                    android:textSize="@dimen/_16_dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/date_paid"
                    android:textSize="@dimen/_16_dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/amount_paid"
                    android:textSize="@dimen/_16_dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/bill_no"
                    android:textSize="@dimen/_16_dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/dash_seperator"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="4">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/dash"
                        android:textSize="@dimen/_16_dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/dash"
                        android:textSize="@dimen/_16_dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/dash"
                        android:textSize="@dimen/_16_dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/dash"
                        android:textSize="@dimen/_16_dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/details"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_8_dp"
                    android:layout_toRightOf="@id/dash_seperator"
                    android:orientation="vertical"
                    android:weightSum="4">

                    <TextView
                        android:id="@+id/fee_month"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:textSize="@dimen/_12_dp" />

                    <TextView
                        android:id="@+id/fee_date_paid"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:textSize="@dimen/_12_dp" />

                    <TextView
                        android:id="@+id/fee_amount_paid"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:textSize="@dimen/_12_dp" />

                    <TextView
                        android:id="@+id/fee_bill_no"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_light"
                        android:gravity="center"
                        android:textSize="@dimen/_12_dp" />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>